Fix for placeholder unreadable text

--- a/_sass/_sidebar.scss
+++ b/_sass/_sidebar.scss
@@ -58,6 +58,10 @@
       outline: none;
     }
 
+    &::placeholder {
+      color: $sidebar-heading;
+    }
+
     @media (prefers-color-scheme: dark) {
       background: $blue-tertiary-dark;
       border-color: $blue-tertiary-dark;
